--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "promise",
+  "proxy": "http://localhost:8000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^1.6.7",
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
