--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "tailwindcss": "^3.4.1",
+    "react-redux": "9.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
