--- a/source/package.json
+++ b/source/package.json
@@ -1,6 +1,7 @@
 {
   "name": "promise",
   "proxy": "http://localhost:8000",
+  "host": "0.0.0.0",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
