--- a/source/package.json
+++ b/source/package.json
@@ -1,7 +1,6 @@
 {
   "name": "promise",
-  "proxy": "http://localhost:8000",
-  "host": "0.0.0.0",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,17 +9,46 @@
     "@mui/icons-material": "^5.15.13",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.8"
+    "react-router-dom": "^5.3.4",
+    "styled-components": "^6.1.8",
+    "web-vitals": "^2.1.4",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "sequelize": "^6.32.0",
+    "express-validator": "^6.15.0",
+    "js-cookie": "^3.0.5",
+    "mdb-cli": "^4.3.0",
+    "nodemon": "^2.0.22",
+    "per-env": "^1.0.2",
+    "pg": "^8.11.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
-    "eject": "react-scripts eject"
+    "draw": "node draw.js",
+    "render-postbuild": "npm run build --prefix source",
+    "install": "npm --prefix backend install backend && npm --prefix source install frontend",
+    "dev:backend": "npm install --prefix backend start",
+    "dev:frontend": "npm install --prefix source start",
+    "sequelize": "npm run --prefix backend sequelize",
+    "sequelize-cli": "npm run --prefix backend sequelize-cli",
+    "start": "npm start --prefix backend",
+    "build": "npm run build --prefix backend"
   },
+  
+  "main": "index.js",
   "eslintConfig": {
     "extends": [
       "react-app"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PatrickMck34/API-project.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PatrickMck34/API-project/issues"
   },
   "browserslist": {
     "production": [
@@ -45,6 +73,7 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
