--- a/source/src/package.json
+++ b/source/src/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.13",
     "axios": "^1.6.8",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@material-tailwind/react": "^2.0.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.2",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
@@ -15,7 +24,9 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "tailwindcss": "^3.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-redux": "^7.2.9",
+    "styled-components": "^6.0.0-rc.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,5 +58,6 @@
     "styled-components": "^6.1.8",
     "tailwindcss": "^3.4.1",
     "thunk": "^0.0.1"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
