--- a/source/package.json
+++ b/source/package.json
@@ -30,8 +30,8 @@
     "dev:frontend": "npm install --prefix source start",
     "sequelize": "npm run --prefix backend sequelize",
     "sequelize-cli": "npm run --prefix backend sequelize-cli",
-    "start": "npm start --prefix backend",
-    "build": "npm run build --prefix backend"
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build"
   },
   
   "main": "index.js",
