--- a/source/package.json
+++ b/source/package.json
@@ -73,7 +73,6 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
-    "tailwindcss": "^3.4.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "tailwindcss": "^3.4.1"
   }
 }
