--- a/source/backend/.gitignore
+++ b/source/backend/.gitignore
@@ -10,14 +10,15 @@
 
 # production
 /build
-
+misc
+env
 # misc
 .DS_Store
-.env.local
-.env
-.env.development.local
-.env.test.local
-.env.production.local
+/.env.local
+/.env
+/.env.development.local
+/.env.test.local
+/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
