--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "@mui/icons-material": "^5.15.13",
   
     
+  "express": "^5.0.0-beta.2",
+  
+    
   "express-validator": "^6.15.0",
   
     
